--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
             font-size: 1em;
             color: red;
             }
-          p {
+            p {
             text-align: center;
             color: black;
             }
@@ -60,6 +60,12 @@
             </tr>
             </tr>
             </table>
+            <form>
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname"><br>
+                <label for="score">score:</label><br>
+                <input type="number" id="score" name="score">
+              </form>
         </div>
        <p><a name="GAME">Game</a></p>
        <img src="/Users/pollyanna/Documents/WEBAPPS/node_server_template/qwirkle_game.png">
